--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Local development environment
-REACT_APP_API_BASE_URL=http://localhost:3001
+REACT_APP_API_BASE_URL=https://json-server-vercel-rflj.vercel.app
